--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 3 File Structures</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+		<h1>Lab 3 File Structures</h1>
+		<p>The idea of this lab was to connect and link labs together
+			and also link images into your html file.</p>
+		<h2> Challenges </h2>
+		<p>It was hard to tell what I needed to screenshot but other than that
+			I wasn't having too much trouble linking the files together</p>
+			<h2>Results</h2>
+			<p>Here are the results of my work for lab 3</p>
+			<img src = "img/picture.png" width="400">
+			<p>Here is my code from my art101 folder. </p>
+			<img src = "img/pic1.png" width="400">
+			<p>Here is my current index.html file. </p>
+			<img src = "img/pic2.png" width="400">
+			
 
-</body>
 </html>
