--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 		Francisco, California. I enjoy cooking and playing games.</p>
 		<h2>
 
-		
+			<div id= "content" >
 		<img src = "img/pic.jpg" width = 400/>
 		<nav>
 			<ul>
+
 
 				<li class="lab" id = "lab_2"><a href="lab2/helloworld.html" >Lab2 : Stuff</a></li>
 				<li class="lab" id = "lab_3"><a href="lab3/index.html" >Lab3 : Stuff</a></li>
 				<li class="lab" id = "lab_4"><a href="lab4/index.html" >Lab4 : Stuff</a></li>
 				<li class="lab" id = "lab_5"><a href="lab5/index.html" >Lab5 : Stuff</a></li>
 				<li class="lab" id = "lab_6"><a href="lab6/index.html" >Lab6 : Stuff</a></li>
-
+		</div>
 	</main>
 
 
