--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 5: Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+
 </head>
 <body>
+	<div id = "content">
+		<img src = "img/car.jpg" width = 400>
+		<h1> Lab 5: Data Types and Variables </h1>
+		<p>Here is a stock photo of the current car that I have. It's a 2005 Toyota Prius
+		and it's almost as old as I am. </p>
+		<h2>Challenges </h2>
+		<p>Challenges for this lab was finding a partner and then although it wasn't hard
+		but I learned that you can connect js files and html which is interesting.</p>
+		<h2>Problems </h2>
+		<p>Problems that we faced were getting the github link to start working. </p>
+		<h2>Results </h2>
+		<p>Here are the results of our code that we put inside of our js file as well
+		as my index.html file you see here. </p>
+		<div>
+			<h2>Script Output </h2>
+			<script src = "js/lab.js"></script>
+		</div>
+	</div>
 
 </body>
 </html>
