--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6 - Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id = "content">
+	<h1> Lab 6: Arrays and Objects </h1>
+	<img src = "img/carcopy.jpg" width = 400>
+
+	<h2> Challenges</h2>
+	<p>Challenges for this lab was finding a partner again. I couldn't find a partner this week
+	so I'm working on it myself this time.</p>
+	<h2>Problems </h2>
+	<p>Problems that I faced was finding a group member and then creating the function for age inside the object. </p>
+	<h2>Results </h2>
+	<p>Here are the results of the code that I put inside of the js file as well
+	as my script output you see below. </p>
+	<div>
+		<h2>Script Output </h2>
+		<script src = "js/lab6.js"></script>
+	</div>
+</div>
 
 </body>
 </html>
