--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 				<li class="lab" id = "lab_5"><a href="lab5/index.html" >Lab5 : Stuff</a></li>
 				<li class="lab" id = "lab_6"><a href="lab6/index.html" >Lab6 : Stuff</a></li>
 				<li class="lab" id = "lab_7"><a href="lab7/index.html" >Lab7 : Stuff</a></li>
+				<li class="lab" id = "lab_8"><a href="lab8/index.html" >Lab8 : Stuff</a></li>
+				<li class="lab" id = "lab_9"><a href="lab9/index.html" >Lab9 : Stuff</a></li>
 		</div>
 	</main>
 
