--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 				<li class="lab" id = "lab_7"><a href="lab7/index.html" >Lab7 : Stuff</a></li>
 				<li class="lab" id = "lab_8"><a href="lab8/index.html" >Lab8 : Stuff</a></li>
 				<li class="lab" id = "lab_9"><a href="lab9/index.html" >Lab9 : Stuff</a></li>
+				<li class="lab" id = "lab_10"><a href="lab10/index.html" >Lab10 : Stuff</a></li>
+				<li class="lab" id = "lab_11"><a href="lab11/index.html" >Lab11 : Stuff</a></li>
+				<li class="lab" id = "lab_12"><a href="lab12/index.html" >Lab12 : Stuff</a></li>
 		</div>
 	</main>
 
