--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 				<li class="lab" id = "lab_10"><a href="lab10/index.html" >Lab10 : Stuff</a></li>
 				<li class="lab" id = "lab_11"><a href="lab11/index.html" >Lab11 : Stuff</a></li>
 				<li class="lab" id = "lab_12"><a href="lab12/index.html" >Lab12 : Stuff</a></li>
+				<li class="lab" id = "lab_13"><a href="lab13/index.html" >Lab13 : Stuff</a></li>
+				<li class="lab" id = "lab_14"><a href="lab14/index.html" >Lab14 : Stuff</a></li>
+				<li class="lab" id = "lab_15"><a href="lab15/index.html" >Lab15 : Stuff</a></li>
+				<li class="lab" id = "lab_16"><a href="lab16/index.html" >Lab16 : Stuff</a></li>
 		</div>
 	</main>
 
